# ai-tools-demo

./: README.md  pyproject.toml
adw/: versioning.py
specs/: start.txt  transcript-analytics-spec.md
src/aitools/: constants.py  data_types.py  llm.py  main.py  word_counter.py
